# CeDNe

./: .deptry.toml  .gitignore  .gitignore.swp  .readthedocs.yaml  CONTRIBUTING.md  README.md  TODO.md  pyproject.toml
.binder/: requirements.txt
.github/workflows/: ci.yml
binder/: postBuild
data_sources/: Cell_list.pkl  chem_adj.pkl  gapjn_symm_adj.pkl  neuronPosition.pkl
docs/: conf.py  index.rst  temp.txt
examples/notebooks/: 01-create_worm_and_graph_connections.ipynb  02-load-neurotransmitters-and-subgraph.ipynb  02-save_worm_and_load_worm.ipynb  03-fold-network-and-load-data.ipynb  03-load_neuropeptide_and_find_intersection_graphs.ipynb  04-load-transcripts-and-view-positions.ipynb  05-load-neuropeptide.ipynb  05-view-3D-positions.ipynb  06-load-neuropeptide.ipynb  06-load-neuropeptides.ipynb  07-load-neurotransmitters-and-make-putative-graphs.ipynb  08-all-paths-between-neuron-pair.ipynb  09-load-different-connectomes.ipynb  10*-time-series-and-correlations.ipynb  11-motif-search.ipynb  12-subnetwork-connectivity.ipynb  13-load_fly.ipynb  14-NetworkStructure.ipynb  14-load-male.ipynb  15-sequential-hierarchy-simulation.ipynb  16-simulate-motifs-timeseries.ipynb  17-optimize-parameters-timeseries.ipynb  18-simulate-optimize-integrated-hierarchical-sequences-whole-brain-2nd-copy.ipynb  18-simulate-optimize-integrated-hierarchical-sequences-whole-brain.ipynb  19-enriched-neuropeptides.ipynb  21-maximum-capacity-flow.ipynb  DVA-neuropeptide-neurotransmitter-hierarchical-sequences.ipynb  all-paths-between-neurons.ipynb  find-defining-transcripts-for-neuronal-cohorts.ipynb  fold-network-and-load-data.ipynb  hseq-individual-timeseries.ipynb  known-gap-junction-heteromers.ipynb  load-transcripts-and-view-positions.ipynb  minimal-identifying-transcripts.ipynb  save_worm_and_load_worm.ipynb  temp_filled.csv  time-series-and-correlations.ipynb  worm.pkl
examples/notebooks/archive/: lineage.ipynb  sim-opt.py
examples/python/: 01-create_worm_and_graph_connections.py  02-save_worm_and_load_worm.py  03-fold-network-and-load-data.py  04-load-transcripts-and-view-positions.py  18-simulate-optimize-integrated-hierarchical-sequences-whole-brain-2nd-copy-sim.py  18-simulate-optimize-integrated-hierarchical-sequences-whole-brain-2nd-copy.ipynb  18-simulate-optimize-integrated-hierarchical-sequences-whole-brain.py  19-read-optimization-files.ipynb
src/cedne/: __init__.py  cedne.py  optimizer.py  simulator.py  utils.py
src/cedne/core/: __init__.py  animal.py  behavior.py  config.py  connection.py  context.py  io.py  logger.py  mapping.py  network.py  neuron.py  recordings.py
src/cedne/utils/: __init__.py  config.py  graphtools.py  loader.py  plotting.py
tests/: __init__.py  test_cedne.py  test_recordings.py  test_utils.py  test_worm_creation.py
