[tool.poetry]
package-mode = true
name = "cedne"
version = "0.1.0"
description = "CEDNE (s'Idni) is a library for integrating various omic level datasets together into a graph format."
authors = ["Sahil Moza <sahil.moza@gmail.com>"]
maintainers = ["Sahil Moza <sahil.moza@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://cedne.org"
repository = "https://github.com/sahilm89/cedne"

[tool.poetry.dependencies]
python = "^3.12"
networkx = "^3.3"
matplotlib = "^3.9.0"
numpy = "^1.26.4"
scipy = "^1.13.1"
openpyxl = "^3.1.3"
pandas = "2.0.3"
ipykernel = "^6.29.4"
textalloc = "^1.0.5"
pytest = "^8.2.2"
sphinx = "^7.3.7"
sphinx-rtd-theme = "^2.0.0"
pydata-sphinx-theme = "^0.15.3"
xlrd = "^2.0.1"
ipympl = "^0.9.4"
cmasher = "^1.8.0"
pyqt5 = "^5.15.10"
svglib = "^1.5.1"
pyvis = "^0.3.2"
joblib = "^1.4.2"
dill = "^0.3.9"
pywavelets = "^1.7.0"
tensorly = "^0.8.1"
scikit-learn = "^1.5.2"
scanpy = "^1.10.4"
optuna = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
