[tool.poetry]
package-mode = true
name = "cedne"
version = "0.1.0"
description = "CEDNE (s'Idni) is a library for integrating various omic level datasets together into a graph format."
authors = ["Sahil Moza <sahil.moza@gmail.com>"]
maintainers = ["Sahil Moza <sahil.moza@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://cedne.org"
repository = "https://github.com/sahilm89/cedne"
packages = [{ include = "cedne",  from= "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<=3.14.0"
networkx = "^3.2.1"
matplotlib = "^3.9.0"
numpy = "^1.26.4"
scipy = "^1.13.1"
pandas = "2.0.3"
ipykernel = "^6.29.4"
textalloc = "^1.0.5"
cmasher = "^1.8.0"
joblib = "^1.4.2"
pywavelets = "^1.6.0"
tensorly = "^0.8.1"
scikit-learn = "^1.5.2"
scanpy = ">=1.9.0,<2.0.0"
optuna = "^4.1.0"
jax = ">=0.4.38,<0.5.0"
psycopg2 = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --cov=cedne --cov-report=xml --cov-report=term-missing"
testpaths = ["tests"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
nbval = "^0.10.0"  # if you're testing notebookscoverage = "^7.8.0"
pytest-cov = "^6.1.1"
